alignment fix

--- a/src/components/WebsiteTabs/website-tabs.scss
+++ b/src/components/WebsiteTabs/website-tabs.scss
@@ -38,7 +38,7 @@
   background: $ui-02;
   border: none;
   border-top: rem(3px) solid $ibm-colors__blue--60;
-  padding-top: rem(10px);
+  padding-top: rem(9px);
 }
 
 .website-tabs div.tab-content {
